--- a/deploy/kubernetes/base/node.yaml
+++ b/deploy/kubernetes/base/node.yaml
@@ -30,6 +30,7 @@ spec:
                 - fargate
       nodeSelector:
         kubernetes.io/os: linux
+        beta.kubernetes.io/instance-type: "t3.medium"
       hostNetwork: true
       serviceAccountName: ebs-csi-node-sa
       priorityClassName: system-node-critical
